--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>blinx-resource-server</groupId>
-	<artifactId>blinx-resource-server</artifactId>
+	<groupId>movie-catalog-app</groupId>
+	<artifactId>movie-catalog-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
-	<name>blinx-resource-server</name>
-	<description>Demo project for Spring Boot</description>
+	<name>movie-catalog-app</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -104,19 +102,10 @@
 				<groupId>org.codehaus.gmavenplus</groupId>
 				<artifactId>gmavenplus-plugin</artifactId>
 				<version>1.5</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>addTestSources</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
