--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,25 @@
-# Enabling H2 Console
+###
+#   Database Settings
+###
+spring.datasource.url=jdbc:h2:~/movie-catalog-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.platform=h2
+spring.datasource.username = test
+spring.datasource.password = test
+spring.datasource.driverClassName = org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+###
+#   H2 Settings
+###
 spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+
+###
+#   Hibernate Settings
+###
+spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
