Manual testing revealed I was using the last two digits of the year for directors dob which is a problem so I update it to use all 4 digits. Also included an in artifact h2 persistent db for demonstration purposes only

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###
 #   Database Settings
 ###
-spring.datasource.url=jdbc:h2:~/movie-catalog-app;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.url=jdbc:h2:./database/movie-catalog-app-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 spring.datasource.username = test
 spring.datasource.password = test
@@ -19,7 +19,7 @@ spring.h2.console.settings.web-allow-others=false
 ###
 #   Hibernate Settings
 ###
-spring.jpa.hibernate.ddl-auto = validate
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.use_sql_comments=false
 spring.jpa.properties.hibernate.format_sql=false
