--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-###
-#   Database Settings
-###
+####
+##   Database Settings
+####
 spring.datasource.url=jdbc:h2:./database/movie-catalog-app-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
 spring.datasource.username = test
