--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ####
-##   Database Settings
+##   H2 Database settings
 ####
 spring.datasource.url=jdbc:h2:./database/movie-catalog-app-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.platform=h2
@@ -9,7 +9,7 @@ spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ###
-#   H2 Settings
+#   H2 browser console settings
 ###
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
@@ -17,7 +17,7 @@ spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 
 ###
-#   Hibernate Settings
+#   Hibernate settings
 ###
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.show_sql=false
